<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607D8B"
    android:orientation="vertical"
    tools:context="com.example.ammei.musicappudacity.MusicActivity">

    <TextView
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1976D2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/jammin_music_header"
        android:textColor="#000000"
        android:textSize="18sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/go_home5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/home_button"
                android:textColor="#64B5F6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/musicLibrary5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@+id/go_home5"
                android:text="@string/music_library"
                android:textColor="#64B5F6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/artist_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/musicLibrary5"
                android:layout_toRightOf="@+id/musicLibrary5"
                android:text="@string/artist_list"
                android:textColor="#64B5F6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/playlists_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/artist_5"
                android:layout_toRightOf="@+id/artist_5"
                android:text="@string/my_playlists"
                android:textColor="#64B5F6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/music_download5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@id/playlists_5"
                android:text="@string/download_music"
                android:textColor="#64B5F6"
                android:textSize="18sp" />

        </RelativeLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/now_playing_header"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/nowPlayingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/click_me_button" />

    <TextView
        android:id="@+id/playingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="#000000" />

</LinearLayout>