<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607D8B"
    tools:context="com.example.ammei.musicappudacity.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#78909C"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/jammin_music_header"
        android:textColor="#000000"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="44dp"
        android:scaleType="centerCrop"
        android:src="@drawable/guitar" />

    <TextView
        android:id="@+id/musicLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/artists"
        android:layout_alignBottom="@+id/artists"
        android:layout_toLeftOf="@+id/artists"
        android:layout_toStartOf="@+id/artists"
        android:background="#1976D2"
        android:padding="8dp"
        android:text="@string/music_library"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/artists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#4DD0E1"
        android:padding="8dp"
        android:text="@string/artist_list"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/artists"
        android:layout_alignBottom="@+id/artists"
        android:layout_toEndOf="@+id/artists"
        android:layout_toRightOf="@+id/artists"
        android:background="#2196F3"
        android:padding="8dp"
        android:text="@string/my_playlists"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/music_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicLibrary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="#64B5F6"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/download_music"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/nowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/music_download"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="#BBDEFB"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/now_playing"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>

